--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <ol>
       <li>Playing double bass</li>
       <li>Playing flute</li>
-      <li>Heavy drinking</li>
+      <li>Painting</li>
     </ol>
 
   </body>
