--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   <body>
     <table>
       <tr>
-        <td><img src="kukkia.jpg" alt="kukkia"</td>
+        <td><img src="matilda.png" alt="face"</td>
         <td><h1>Matilda </h1>
           <p> <em>My first webpage</em></p>
-          <p>I am a physisist. I love <a href="https://fi.wikipedia.org/wiki/Tee"> tea </a> </p></td>
+          <p>I am MSc in physics and I love <a href="https://fi.wikipedia.org/wiki/Tee"> tea </a> </p></td>
       </tr>
     </table>
-
-  <!-------  <img src="naama.jpg" alt="matilda face"> ---------->
 
     <hr>
     <h3>Education</h3>
@@ -57,9 +55,7 @@
       <tbody>
             <tr>
               <td>Python </td>
-              <td> ⭐⭐</td>
               <td>R</td>
-              <td> ⭐⭐</td>
             </tr>
             </tbody>
           </table>
@@ -70,9 +66,7 @@
       <tbody>
             <tr>
               <td>C </td>
-              <td> ⭐⭐</td>
               <td>Comsol</td>
-              <td> ⭐⭐</td>
             </tr>
             </tbody>
           </table>
